<resources>
    <string name="app_name">project_2</string>
    <string name="plant_plus">Plant Plus</string>
    <string name="todo">flower</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="emailToast">You must enter email to register!</string>
    <string name="Marigold">Marigold health benefits:
Soothes skin and treats skin diseases
Reduces inflammation
Strong antibacterial and antiseptic properties
Strengthens eyes</string>
    <string name="Catnip">
        Catnip is a fun plant for cats. Most cats are attracted to the plant and will roll around near it since its aroma acts as a stimulant.
    </string>
    <string name="Gingko">
        gingko is one of the oldest homeopathic plants and a key herb in Chinese medicine. The leaves are used to create capsules, tablets, and extracts, and when dried, can be consumed as a tea.

    </string>
    <string name="Turmeric">
       <b> Turmeric could be beneficial for:</b>
pain caused by inflammatory diseases, like arthritis.
preventing cancer.
stopping DNA mutations.
several skin diseases.
    </string>
    <string name="Moonflowers">
Evening primrose flowers are also called moonflower because they bloom as the sun begins to set. People often say they smell like lemons.
    </string>
    <string name="privacypolicy">
        <b>Privacy Policy of plant plus, Inc.</b>
          \n\n
       <p> Plant plus, Inc.(\"We\" or \"us\"or\"ours\" as applicable) takes great care in ensuring that any transmission of
        your personal information remains private and is not disclosed in an unauthorized way. We respect the privacy
        of every person who uses the mobile application, including related features, products and services (collectively
        referred to as the \"Platform\") and we are committed to a safe online experience for our users. Although the platform
        is not designed to collect material personal data, we feel that it is important to explain the information we collect,
        what we do with it, and describe the rights you may have in relation to the data. We also respect the privacy of everyone
        who uses the services we provide from the platform or deals with the platform or from us to use the services provided
        (whether through the platform or not) (the \"service\" or \"services\") or whose personal information may be processed as a
        result of the use of others. For services.</p>
        \n
        \n\n

        <b>WHAT IS THE PURPOSE OF THIS PRIVACY POLICY\?</b>
        \n\n

        <p>This privacy statement (\"Privacy Policy\") explains our collection of any personal information that we may obtain about you
        from you or a third party and the purposes for which we may process such information. This Privacy Policy also sets out your
        rights in respect to our processing of your personal information. The purpose of this Privacy Policy is also to comport to applicable
            data privacy laws and, if applicable, the \"DP Laws\" (as defined near the end of this Privacy Policy).</p>
      \n
        <p>This Privacy Policy informs you of the nature of the information that is collected and processed by us and how you can request that
            we delete, update, transfers and/or provide you with access to it.</p>
        \n

        <p>This Privacy Policy is intended to help you make an informed decision when using the Platform and our Services and/or to understand
        how your information may be processed by us as a result of your use of and the function of the Platform and Services. Please read
        this Privacy Policy carefully so that you understand it. Please note that when using the Platform it should be read in conjunction
            with our Terms of Service, as may be updated from time to time.</p>
        \n

        <p>Please also note that this Privacy Policy only applies to the use of your personal information obtained by us, it does NOT apply to
            your personal information that is collected during your communications with third parties.</p>
         \n
        \n

        <b>Who is the PLANT PLUS, INC. What do we do\?</b>
         \n\n
        <p>Plant plus, Inc. It is an application for a graduation project established in Jordan. We are the data controller responsible for
            processing your personal information through the platform.</p>
        \n \n

        <b>HOW TO CONTACT US\?</b>
                 \n\n
        <p>If you have any questions about this Privacy Policy or want to take any action with respect to your personal information as set out
            in this Privacy Policy, you must contact us by: </p>
        \n
        Sending an Email to: Project.herb2\@gmail.com
        \n
         \n
        <b>WHY DO WE COLLECT YOUR DATA AND WHAT DO WE COLLECT\?</b>
         \n \n
        Our primary goal in collecting personal information from you is to:
        \n
            \t\t1) verify your identity.\n
            \t\t2) help us deliver the Services and provide your ability to use the Platform actively.\n
            \t\t3) improve, develop and market new Services.\n
            \t\t4) carry out requests made by you on the Platform or in relation to our Services.\n
            \t\t5) investigate or settle inquiries or disputes.\n
            \t\t6) comply with any applicable law.\n
            \t\t7) enforce our agreements with you.\n
            \t\t8) protect the rights, property or safety of us or third parties, including our other customers, subscribers and users of the Platform
            or our Services.\n
            \t\t9) provide support for the provision of our Services.\n
            \t\t10) use as otherwise permitted by law.\n
                \n
 \n
        To undertake these goals, we may collect the following personal information related to our users:
         \n
            *Name \n
            *E-mail address \n
            *IP Address saved by our web server logs \n
            *Third-party service vendor data, as collected by such third-party\'s at our request \n
            *Other data collected using Google Analytics by Google, Inc. \n
         \n

        We may also collect information about your use of the Platform including: \n
         \n
            *Electronic communications protocols \n
            *Web pages visited \n
            *Cookies \n
            *User preferences \n
            * User privileges \n
            *Other information relevant to provision of the Services \n
            *Other information as may be requested by us from you in relation to provision of the Services \n
            *Third-party monitoring related to web traffic \n
            

</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="username">User name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="back">Back</string>
    <string name="create">Create New Account</string>
    <string name="choose">choose your account type</string>
    <string name="herbalist">Herbalist Account</string>
    <string name="user">User Account</string>
    <string name="have_accepted">I have accepted the</string>
    <string name="signup">Sign UP</string>
    <string name="fruit">Fruit</string>
    <string name="leaf">Leaf</string>
    <string name="flower">Flower</string>
    <string name="trees">Trees</string>
    <string name="seeds">Seeds</string>
    <string name="roots">Roots</string>
    <string name="plant_name">Plant Name</string>
    <string name="symptoms">Symptoms treated by the plant</string>
    <string name="select_symptoms">Select Symptoms</string>
    <string name="description">Description</string>
    <string name="parts">Parts of plant that use</string>
    <string name="did">Did you know</string>
    <string name="update_plant">Update Plant</string>
    <string name="update">Update</string>
    <string name="Select_location">Select location</string>
    <string name="Place_origin">Place of origin</string>
</resources>