<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/PrimaryTint_9"
    tools:context=".update_plant">

<com.google.android.material.appbar.AppBarLayout
    android:id="@+id/appBarLayout"
    style="@style/Widget.MaterialComponents.ActionBar.Primary"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cardview_light_background"
    tools:ignore="MissingConstraints">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/arrow_back"
        app:navigationIconColor="@color/PrimaryShade_10"
        app:title="@string/update_plant"
        app:titleTextColor="@color/PrimaryShade_10"
        tools:ignore="ExtraText">

    </com.google.android.material.appbar.MaterialToolbar>

</com.google.android.material.appbar.AppBarLayout>

<ImageView
    android:id="@+id/plant_image"
    android:layout_width="350dp"
    android:layout_height="150dp"
    android:layout_marginBottom="37dp"
    android:adjustViewBounds="true"
    android:background="@color/cardview_light_background"
    android:scaleType="fitXY"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.491"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.171"
    app:shapeAppearanceOverlay="@style/Circular"
    app:srcCompat="@drawable/plant"
    app:strokeColor="#4CAF50"
    app:strokeWidth="2dp"

    tools:ignore="MissingConstraints" />

<com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/edit_plant"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="end|bottom"
    android:layout_marginTop="68dp"
    android:layout_marginEnd="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="129dp"
    android:scaleType="center"
    android:tint="#FFFFFF"
    app:backgroundTint="#4CAF50"
    app:fabSize="mini"
    app:layout_constraintBottom_toBottomOf="@+id/plant_image"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="1.0"
    app:srcCompat="@drawable/ic_baseline_photo_camera_24"
    app:tint="@color/cardview_light_background"
    tools:ignore="MissingConstraints,VectorDrawableCompat">


</com.google.android.material.floatingactionbutton.FloatingActionButton>

<androidx.core.widget.NestedScrollView
    android:layout_width="350dp"
    android:layout_height="465dp"
    android:layout_marginTop="16dp"
    android:fillViewport="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.491"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/plant_image">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_light_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/plantname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:text="@string/plant_name"
            android:textColor="#4CAF50"
            android:gravity="center"
            android:fontFamily="sans-serif-black"
            android:textSize="18dp" />



        <TextView
            android:id="@+id/textView11"
            android:layout_width="205dp"
            android:layout_height="29dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/symptoms"
            android:fontFamily="sans-serif-black"

            android:textColor="@android:color/black"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/symptoms"
            android:layout_width="317dp"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/boarder"
            android:drawableEnd="@drawable/arrow_drop_down"
            android:drawableTint="@color/PrimaryShade_10"
            android:hint="@string/select_symptoms"

            android:padding="12dp"
            android:textColor="@android:color/black"
            android:textColorHint="#555353"
            tools:ignore="RtlCompat" />
        <TextView
            android:id="@+id/textView32"
            android:layout_width="205dp"
            android:layout_height="29dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/Place_origin"
            android:fontFamily="sans-serif-black"

            android:textColor="@android:color/black"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/location"
            android:layout_width="317dp"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/boarder"
            android:drawableEnd="@drawable/arrow_drop_down"
            android:drawableTint="@color/PrimaryShade_10"
            android:hint="@string/Select_location"

            android:padding="12dp"
            android:textColor="@android:color/black"
            android:textColorHint="#555353"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="88dp"
            android:layout_height="27dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="16dp"
            android:text="@string/description"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-black"

            android:textSize="14dp" />

        <MultiAutoCompleteTextView
            android:id="@+id/description"
            android:layout_width="317dp"
            android:layout_height="139dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/boarder"
            android:textColor="@android:color/black"

            tools:ignore="LabelFor,MissingConstraints" />
        <TextView
            android:id="@+id/textView13"
            android:layout_width="200dp"
            android:layout_height="27dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="16dp"
            android:text="@string/parts"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-black"

            android:textSize="14dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            android:gravity="center">
            <CheckBox
                android:id="@+id/Fruit"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:buttonTint="#4CAF50"
                android:text="@string/fruit"
                android:textColor="@color/PrimaryShade_6" />

            <CheckBox
                android:id="@+id/Leaf"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:buttonTint="#4CAF50"
                android:text="@string/leaf"
                android:textColor="@color/PrimaryShade_6" />

            <CheckBox
                android:id="@+id/Flower"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:buttonTint="#4CAF50"
                android:text="@string/flower"
                android:textColor="@color/PrimaryShade_6" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <CheckBox
                android:id="@+id/Trees"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:buttonTint="#4CAF50"
                android:text="@string/trees"
                android:textColor="@color/PrimaryShade_6" />

            <CheckBox
                android:id="@+id/Seeds"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:buttonTint="#4CAF50"
                android:text="@string/seeds"
                android:textColor="@color/PrimaryShade_6" />

            <CheckBox
                android:id="@+id/Roots"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:buttonTint="#4CAF50"
                android:text="@string/roots"
                android:textColor="@color/PrimaryShade_6" />


        </LinearLayout>
        <TextView
            android:id="@+id/textView12"
            android:layout_width="200dp"
            android:layout_height="27dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="16dp"
            android:text="@string/did"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-black"

            android:textSize="14dp" />

        <MultiAutoCompleteTextView
            android:id="@+id/information"
            android:layout_width="317dp"
            android:layout_height="139dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/boarder"
            android:textColor="@android:color/black"

            tools:ignore="LabelFor,MissingConstraints" />

        <Button
            android:id="@+id/updateplant"
            android:layout_width="285dp"
            android:layout_height="41dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="70dp"
            android:background="#4CAF50"
            android:text="@string/update"
            android:textColor="#ffffff"

            android:textSize="25dp" />


    </LinearLayout>
</androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>