<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".sign_up">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="467dp"
        android:layout_height="428dp"
        android:layout_marginStart="156dp"
        android:layout_marginLeft="156dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/sign_rose" />

    <View
        android:id="@+id/view"
        android:layout_width="410dp"
        android:layout_height="521dp"
        android:background="#EFF4F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.992">


    </View>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/showprofile_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@color/cardview_light_background"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.838"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/Circular"
        app:srcCompat="@drawable/user"
        app:strokeColor="#00A79B"
        app:strokeWidth="2dp"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/profile_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginStart="79dp"
        android:layout_marginLeft="79dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:scaleType="center"
        android:tint="#FFFFFF"
        app:backgroundTint="#00A79B"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@+id/showprofile_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/showprofile_image"
        app:layout_constraintTop_toTopOf="@+id/showprofile_image"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_photo_camera_24"
        app:tint="@color/cardview_light_background"
        tools:ignore="MissingConstraints,VectorDrawableCompat" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username1"
        style="@style/Theme.AppCompat.DayNight.DarkActionBar"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:hint="@string/username"
        app:endIconMode="clear_text"
        app:endIconTint="#272626"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:startIconDrawable="@drawable/user"
        app:startIconTint="#272626"
        tools:ignore="MissingClass,MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:inputType="text"
            android:textColor="@android:color/background_dark"
            tools:layout_editor_absoluteX="27dp"
            tools:layout_editor_absoluteY="153dp" />


    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:text="@string/create"
        android:textColor="@android:color/background_light"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/back11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textColor="@android:color/background_light"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email1"
        style="@style/Theme.AppCompat.DayNight.DarkActionBar"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:hint="@string/email"
        app:endIconMode="clear_text"
        app:endIconTint="#272626"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username1"
        app:startIconDrawable="@drawable/mail"
        app:startIconTint="#272626"
        tools:ignore="MissingClass">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:inputType="text"


            android:textColor="@android:color/background_dark" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password1"
        style="@style/Theme.AppCompat.DayNight.DarkActionBar"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:endIconTint="#272626"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email1"
        app:startIconDrawable="@drawable/lock"
        app:startIconTint="#272626"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:inputType="textPassword"
            android:textColor="@android:color/background_dark"


            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/updateProfile"
        android:layout_width="347dp"
        android:layout_height="54dp"
        android:background="#00A79B"
        android:text="@string/signup"
        android:textColor="#ffffff"
        android:textSize="25dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/terms_con"
        app:layout_constraintVertical_bias="0.529" />

    <TextView
        android:id="@+id/terms_con"
        android:layout_width="151dp"
        android:layout_height="33dp"
        android:fontFamily="sans-serif"
        android:text="@string/terms"
        android:textColor="#00B4AC"
        android:textSize="16dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkTerms"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/checkTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/have_accepted"
        android:textColor="@android:color/background_dark"
        android:textSize="16dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountRadio"
        app:layout_constraintVertical_bias="0.193" />

    <RadioGroup
        android:id="@+id/accountRadio"
        android:layout_width="244dp"
        android:layout_height="76dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/herbalist"
            android:layout_width="162dp"
            android:layout_height="50dp"
            android:text="@string/herbalist"
            android:textColor="@color/SecondaryShade_10"
            android:textSize="16dp" />

        <RadioButton
            android:id="@+id/userAccount"
            android:layout_width="166dp"
            android:layout_height="34dp"
            android:text="@string/user"
            android:textColor="@color/SecondaryShade_10"
            android:textSize="16dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="308dp"
        android:layout_height="33dp"
        android:text="@string/choose"
        android:textColor="@color/SecondaryShade_10"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.291"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password1"
        app:layout_constraintVertical_bias="0.04" />


</androidx.constraintlayout.widget.ConstraintLayout>